2007-12-19  Dan Winship  <danw@gnome.org>

	* libsoup/soup-server.c: define new request_started, request_read,
	request_finished, and request_aborted signals, for finer-grained
	tracking than normal handlers allow.
	(check_auth): split this out of call_handler, and run it
	immediately after "got_headers", not "got_body", so that we can
	preemptively reject "Expect: 100-continue" messages that will
	require auth.

	* libsoup/soup-message-io.c (io_write, io_read): Fix up
	100-continue processing

	* tests/continue-test.c: new test of client/server 100-continue
	processing

2007-12-19  Dan Winship  <danw@gnome.org>

	* libsoup/soup-socket.c: Cleanup. Remove the "connect_result"
	signal. Make local_address and remote_address
	into (construct-only) properties.
	(soup_socket_connect_async, soup_socket_connect_sync): Replace
	soup_socket_connect. _async takes a callback+user_data (like the
	old soup_socket_client_new_async), but doesn't implement the
	callback in terms of a connect_result signal.
	(soup_socket_client_new_async, soup_socket_client_new_sync): Gone.
	(Unused since the async_context addition anyway). Replaced by the
	new construct properties and connect methods.
	(soup_socket_read, soup_socket_read_until, soup_socket_write):
	Make these actually take a GError rather than doing an ugly hack
	to preserve the old API.
	(SOUP_SOCKET_FLAG_NODELAY, SOUP_SOCKET_FLAG_REUSEADDR)
	(SOUP_SOCKET_FLAG_CLOEXEC): kill these off (all three are always
	TRUE now); SoupSocket is libsoup's socket API; it's not
	necessarily intended to be generically useful for everyone.

	* *.c: Update for SoupSocket changes

2007-12-19  Dan Winship  <danw@gnome.org>

	* libsoup/soup-server-message.c: Kill!

	* libsoup/soup-message-server-io.c (parse_request_headers):
	Generate the full request URL from the socket's data, since we no
	longer have soup_server_message_get_server().

	* libsoup/soup-server.c (request_finished, call_handler)
	(start_request, new_connection): update
